tests/unit/evaluation/minizinc/general/test_bad_array_size-bad.mer_fd.exp
test_bad_array_size-bad.mzn:1: error: 
test_bad_array_size-bad.mzn:1:   In variable declaration for a 
test_bad_array_size-bad.mzn:1:   Arrays have different index sets ([1..3] vs 
test_bad_array_size-bad.mzn:1:   [1..4]).
