tests/unit/evaluation/minizinc/general/test_bad_array_size-bad.mzn
% RUNS ON mzn_fd
% RUNS ON mzn_mer_fd
% RUNS ON mzn_mer_Lp
% RUNS ON mzn_cd_fd
array [1..3] of int: a :: is_output = [1, 2, 3, 4];

solve satisfy;
